--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/moment-timezone": "^0.5.13",
     "@types/mongoose": "^5.7.7",
+    "@types/nodemailer": "^6.4.0",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "cors": "^2.8.5",
